--- a/packages/example/docs/pages/antd-docs.mdx
+++ b/packages/example/docs/pages/antd-docs.mdx
@@ -9,3 +9,8 @@ import { Button } from 'antd';
 <Button onClick={() => confirm('Are you sure?')}>Show Confirm</Button>
 <Button onClick={() => prompt('What is your name?').then((res) => console.log(res))}>Show Prompt</Button>
 
+## breadcrumb
+
+import { AcBreadcrumb } from '@jswork/antd-components';
+
+<AcBreadcrumb items={[{ label: 'Home', href: '/' }, { label: 'List', href: '/list' }, { label: 'Detail' }]} />
